cmake_minimum_required(VERSION 3.26)
project(Data_Structures)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_Structures
#        First_Lecture/midterm_prep.cpp
        midterm/midterm.cpp
        #        Homeworks/Week6/2d_arrays.cpp
#        First_Lecture/main.cpp
#        Homeworks/Week1/HW1.cpp
#        Homeworks/Week1/HW2.cpp
#        Homeworks/Week2/HW3.cpp
#        Homeworks/Week2/HW4.cpp
#        Homeworks/Week3/HW6.cpp
#        Homeworks/Week3/HW5.cpp
#        Homeworks/Week4/HW7.cpp
#        Homeworks/Week5/Song.cpp
#        Homeworks/Week4/HW8.cpp
#        Homeworks/Week6/2d_arrays.cpp
)
